# aleth

cmake/: FastestAvailableArch.cmake
evmInputs/XMUL/: Int8Lanes.code
evmInputs/XSUB/: Int16Lanes.code  Int2Lanes.code  Int4Lanes.code  Int8Lanes.code
libevm/: CMakeLists.txt  Instruction.cpp  LegacyVM.cpp  LegacyVM.h  LegacyVMConfig.h  LegacyVMOpt.cpp  LegacyVMSIMD.cpp
